tests/snapshots/integration__integration_tests__remove__remove_json.snap
---
source: tests/integration_tests/remove.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "branch": "feature",
    "branch_checked_out_at": null,
    "branch_outcome": "deleted",
    "kind": "worktree",
    "path": "<PATH>",
    "worktree_outcome": "removed"
  }
]
