tests/snapshots/integration__integration_tests__remove__remove_json_branch_only.snap
---
source: tests/integration_tests/remove.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "branch": "orphan-branch",
    "branch_checked_out_at": null,
    "branch_outcome": "deleted",
    "detached_worktree": null,
    "kind": "branch_only",
    "pruned": false
  }
]
