tests/snapshots/integration__integration_tests__remove__remove_json_current.snap
---
source: tests/integration_tests/remove.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "branch": "feature",
    "branch_deleted": true,
    "kind": "worktree",
    "path": "<PATH>"
  }
]
