tests/snapshots/integration__integration_tests__remove__remove_json_multi_with_branch_only.snap
---
source: tests/integration_tests/remove.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "branch": "wt-feature",
    "branch_checked_out_at": null,
    "branch_outcome": "deleted",
    "kind": "worktree",
    "path": "<PATH>",
    "worktree_outcome": "removed"
  },
  {
    "branch": "orphan-branch",
    "branch_checked_out_at": null,
    "branch_outcome": "deleted",
    "kind": "branch_only",
    "pruned": false
  }
]
